change color tag  p

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
     color:blue;
-}
+} 
 buttom{
     border:1px solid black;
     color:red;
@@ -8,5 +8,5 @@ buttom{
     margin:5%;
 }
 p{
-    color: red;
+    color: green;
 }
